# notebook-bp-validator

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/nb_validator/: __init__.py  cli.py  lib.py
src/nb_validator/schemas/: eumetsat.schema.json  schema_org.schema.json
src/validator/: cli.py
tests/notebooks/: 00.ipynb  00_General_information_about_Jupyter_Lab.ipynb
