[project]
name = "notebook-bp-validator"
version = "0.1"
description = "Jupyter Notebook Best Practices Checker"
authors = [{ name = "Hugo Cremers", email = "hugo.cremers@spaceapplications.com" }]
dependencies = ["jsonschema", "referencing"]

[project.scripts]
nb-validator = "nb_validator.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]